[package]
name = "bonnibel"
version = "0.1.0"
authors = ["Justin C. Miller <justin@devjustinian.com>"]
description = "The jsix OS build tool"
edition = "2018"

[dependencies]
clap-verbosity-flag = "0.2.0"
console = "0.7.7"
env_logger = "*"
exitfailure = "0.5.1"
failure = "0.1.5"
indicatif = "0.11.0"
log = "*"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
structopt = "0.2.18"
tera = "1.0.0-beta.11"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
