[package]
name = "bonnibel"
version = "2.0.1"
authors = ["Justin C. Miller <justin@devjustinian.com>"]
description = "Bonnibel, the jsix OS build tool"
edition = "2018"
license = "MIT"
homepage = "https://github.com/justinian/bonnibel"
repository = "https://github.com/justinian/bonnibel"
readme = "README.md"

[dependencies]
clap-verbosity-flag = "0.2.0"
console = "0.7.7"
directories = "2.0"
env_logger = "0.5.13"
exitfailure = "0.5.1"
failure = "0.1.5"
git2 = "0.9.1"
indicatif = "0.11.0"
log = "0.4.6"
reqwest = "0.9.19"
semver = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
structopt = "0.2.18"
tera = "1.0.0-beta.11"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
